<resources>
    <string name="app_name">Loan_app</string>
    <string name="textHello">Здравствуйте!</string>
    <string name="textInfo">Мы сделали работу с займами удобной.</string>
    <string name="textInfoAdd">Для оформления заявки нажмите зеленую кнопку в правом вернем углу. \nЗаполните необходимые данные. \nОтправьте заявку и ожидайте, \nкогда её одобят. \n\nЧтобы обновить список заявок, потяните экран вниз.</string>
    <string name="textInfoInfo">Если что-то забыли, нажмите на кнопку информации.</string>
    <string name="textAttention">Внимание!</string>
    <string name="textAttentionMessage">Изучайте условия займа, \n чтобы не было проблем в будущем.</string>
    <string name="textUnderstand">Я понял, спасибо!</string>
    <string name="textDate">Создана:</string>
    <string name="textDateValue">Создана: %1$s</string>
    <string name="textAmount">Сумма:</string>
    <string name="textAmountValueRub">Сумма: %1$s руб.</string>
    <string name="textLoan">Заявки</string>
    <string name="textRub">руб.</string>
    <string name="textApproved">Одобрена</string>
    <string name="textRegistered">Зарегистрирована</string>
    <string name="textRejected">Отклонена</string>
    <string name="textPercent">Процентная ставка:</string>
    <string name="textPeriod">Срок займа:</string>
    <string name="textMaxAmount">Максимальная сумма:</string>
    <string name="textRegistration">Регистрация</string>
    <string name="textLogin">Вход</string>
    <string name="textDivider">/</string>
    <string name="hintLogin">Логин</string>
    <string name="hintPassword">Пароль</string>
    <string name="textButtonLogin">Вход</string>
    <string name="textButtonRegistration">Зарегистрироваться</string>
    <string name="textName">Имя:</string>
    <string name="textPhone">Телефон:</string>
    <string name="textButtonPost">Отправить</string>
    <string name="textCondition">Условия займа</string>
    <string name="textLastName">Фамилия:</string>
    <string name="textCreateLoan">Заявка на займ</string>
    <string name="textLoanInfo">Ваша заявка отправлена.\nСтатус заявок вы можете наблюдать в истории и в детальной информации по займу.</string>
    <string name="textButtonHistory">История заявок</string>
    <string name="textCompleted">Займ успешно оформлен!</string>
    <string name="textPaymentValue">Ежемесячный платеж: %1$s</string>
    <string name="textSymbolPercent">%</string>
    <string name="textDays">дней</string>
    <string name="textErrorInput">Заполните все поля в заявке.</string>
    <string name="ErrorAmount">Сумма займа превышает максимальную.</string>
    <string name="textHttpException">Что-то пошло не так. Попробуйте позже.</string>
    <string name="textException">Возникла ошибка. Проверьте подключение к интернету.</string>
    <string name="textErrorUnknown">Неизвестная ошибка.</string>
    <string name="textHttpExceptionDb">Данные могут быть устаревшими. Попробуйте позже.</string>
    <string name="textExceptionDb">Данные могут быть устаревшими. Проверьте подключение к интернету.</string>
    <string name="textErrorLoginPassword">Неверный логин или пароль.</string>
    <string name="textErrorUser">Пользователь уже существует.</string>
    <string name="formatParser">yyyy-MM-dd\'T\'HH:mm:ss.SSSXXX</string>
    <string name="formatDateTime">dd-MM-yyyy HH:mm</string>
    <string name="textErrorLengthPassword">Пароль должен быть не менее 8 символов.</string>
    <string name="textErrorUpperPassword">Пароль должен содержать латинские буквы в верхнем регистре.</string>
    <string name="textErrorLowerPassword">Пароль должен содержать латинские буквы в нижнем регистре.</string>
    <string name="textErrorSymbolPassword">Пароль должен содержать специальные символы (@#$%^+=-)</string>
    <string name="textErrorLogin">Не указан логин.</string>
    <string name="textErrorPassword">Не указан пароль.</string>
    <string name="textRepayment">Погасить до:</string>
    <string name="textDateLoan">Дата оформления:</string>
    <string name="textHowGetLoan">Для получения денежных средств вы можете обратиться в банк с паспортом или оформить выплату на карту в банкомате.</string>
    <string name="formatDate">dd-MM-yyyy</string>
    <string name="textEmptyList">Пустой список</string>
    <string name="textLogOut">Чтобы покинуть личный кабинет, нажмите на кнопку выхода.</string>
    <string name="textSomethingWrong">Что-то пошло не так.</string>
    <string name="textDividerLang">|</string>
    <string name="textStateValue">Займ</string>
    <string name="textPerson">Данные заемщика</string>
    <string name="textGetLoanInfo">Как получить</string>
    <string name="textRu">Русский</string>
    <string name="textEn">English</string>
    <string name="pushText">Осталось три дня для погашения займа.</string>
    <string name="pushTitle">Напоминание об оплате</string>
</resources>