<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageAuth"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:background="@drawable/ic_baseline_account_balance_blue"
        app:layout_constraintBottom_toBottomOf="@+id/buttonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divider" />

    <TextView
        android:id="@+id/dividerLang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="50dp"
        android:text="@string/textDividerLang"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageAuth"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textRu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textRu"
        app:layout_constraintEnd_toStartOf="@+id/dividerLang"
        app:layout_constraintTop_toTopOf="@+id/dividerLang"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:textAppearance="@style/baseText16" />

    <TextView
        android:id="@+id/textEn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textEn"
        app:layout_constraintStart_toEndOf="@+id/dividerLang"
        app:layout_constraintTop_toTopOf="@+id/dividerLang"
        android:textAppearance="@style/baseText16" />


    <TextView
        android:id="@+id/divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="188dp"
        android:text="@string/textDivider"
        app:layout_constraintEnd_toStartOf="@id/textRegistration"
        app:layout_constraintStart_toEndOf="@id/textLogin"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="10dp"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="188dp"
        android:text="@string/textLogin"
        app:layout_constraintEnd_toStartOf="@+id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:textAppearance="@style/baseText18Bold" />

    <TextView
        android:id="@+id/textRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="188dp"
        android:text="@string/textRegistration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/divider"
        app:layout_constraintTop_toTopOf="parent"
        android:textAppearance="@style/baseText18Normal" />

    <EditText
        android:id="@+id/editTextLogin"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="100dp"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:hint="@string/hintLogin"
        style="@style/editTextCreate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginHorizontal="100dp"
        style="@style/editTextCreate"
        android:hint="@string/hintPassword"
        android:inputType="textPassword"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLogin" />

    <TextView
        android:id="@+id/textError"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:textAppearance="@style/baseText18Normal"
        android:textColor="@color/red"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/buttonReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/textButtonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <Button
        android:id="@+id/buttonReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/textButtonRegistration"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />



</androidx.constraintlayout.widget.ConstraintLayout>