<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageAuth"
        android:layout_width="321dp"
        android:layout_height="280dp"
        android:background="@drawable/ic_baseline_assured_workload_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/buttonClose"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_close_24" />

    <TextView
        android:id="@+id/textHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textHello"
        android:layout_margin="20dp"
        android:textAppearance="@style/titleText24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textInfo"
        android:layout_margin="20dp"
        android:textAppearance="@style/baseText16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textHello" />

    <ImageView
        android:id="@+id/buttonAdd"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_margin="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textInfoAdd"
        app:srcCompat="@drawable/ic_outline_add_circle_outline_24" />

    <TextView
        android:id="@+id/textInfoAdd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/textInfoAdd"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:textAppearance="@style/baseText16"
        app:layout_constraintStart_toEndOf="@id/buttonAdd"
        app:layout_constraintTop_toBottomOf="@id/textInfo"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/buttonInfo"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textInfoInfo"
        app:srcCompat="@drawable/ic_outline_info_24" />

    <TextView
        android:id="@+id/textInfoInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/textInfoInfo"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:textAppearance="@style/baseText16"
        app:layout_constraintStart_toEndOf="@id/buttonInfo"
        app:layout_constraintTop_toBottomOf="@id/textInfoAdd"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/buttonLogOut"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textLogOut"
        app:srcCompat="@drawable/ic_baseline_logout_24" />

    <TextView
        android:id="@+id/textLogOut"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/textLogOut"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:textAppearance="@style/baseText16"
        app:layout_constraintStart_toEndOf="@id/buttonInfo"
        app:layout_constraintTop_toBottomOf="@id/textInfoInfo"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textAttention"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/textAttention"
        android:textAppearance="@style/baseText18Bold"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLogOut" />

    <TextView
        android:id="@+id/textAttentionMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/textAttentionMessage"
        android:textAppearance="@style/baseText16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textAttention" />

    <Button
        android:id="@+id/buttonUnderstand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/textUnderstand"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAttentionMessage"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>