<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/buttonClose"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_close_24" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardLoan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="60dp"
        style="@style/cardStyle"
        android:elevation="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageCard"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="10dp"
            android:layout_marginEnd="28dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_card_travel_blue" />

        <TextView
            android:id="@+id/textStateValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/textStateValue"
            android:textAppearance="@style/titleText24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/textPercent"
            android:textAppearance="@style/baseText16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textStateValue" />

        <TextView
            android:id="@+id/textPeriod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/textPeriod"
            android:textAppearance="@style/baseText16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textPercent" />

        <TextView
            android:id="@+id/textPercentValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textAppearance="@style/baseText16"
            app:layout_constraintStart_toEndOf="@id/textPercent"
            app:layout_constraintTop_toBottomOf="@id/textStateValue" />

        <TextView
            android:id="@+id/textSymbolPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textSymbolPercent"
            android:textAppearance="@style/baseText16"
            app:layout_constraintStart_toEndOf="@id/textPercentValue"
            app:layout_constraintTop_toTopOf="@id/textPercentValue" />

        <TextView
            android:id="@+id/textPeriodValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textAppearance="@style/baseText16"
            app:layout_constraintStart_toEndOf="@id/textPeriod"
            app:layout_constraintTop_toBottomOf="@id/textPercentValue" />

        <TextView
            android:id="@+id/textDays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/textDays"
            android:textAppearance="@style/baseText16"
            app:layout_constraintStart_toEndOf="@id/textPeriodValue"
            app:layout_constraintTop_toTopOf="@id/textPeriodValue" />

        <TextView
            android:id="@+id/textAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/textAmount"
            android:textAppearance="@style/baseText16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textPeriod" />

        <TextView
            android:id="@+id/textAmountValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textAppearance="@style/baseText16"
            app:layout_constraintStart_toEndOf="@id/textAmount"
            app:layout_constraintTop_toBottomOf="@id/textPeriodValue" />


        <TextView
            android:id="@+id/textMaxAmountRub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/textRub"
            android:textAppearance="@style/baseText16"
            app:layout_constraintStart_toEndOf="@id/textAmountValue"
            app:layout_constraintTop_toTopOf="@id/textAmountValue" />

        <TextView
            android:id="@+id/textDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/textDateLoan"
            android:textAppearance="@style/baseText16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textAmount" />

        <TextView
            android:id="@+id/textDateValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textAppearance="@style/baseText16"
            app:layout_constraintStart_toEndOf="@id/textDate"
            app:layout_constraintTop_toBottomOf="@id/textAmountValue" />


        <TextView
            android:id="@+id/textRepayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/textRepayment"
            android:textAppearance="@style/baseText16"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textDate" />

        <TextView
            android:id="@+id/textRepaymentValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textAppearance="@style/baseText18Bold"
            android:textColor="@color/red"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@id/textRepayment"
            app:layout_constraintTop_toBottomOf="@id/textDateValue" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardLoanPerson"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="20dp"
        android:elevation="3dp"
        style="@style/cardStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardLoan">

        <ImageView
            android:id="@+id/imageGPerson"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="10dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_person_24" />

        <TextView
            android:id="@+id/textPerson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/textPerson"
            android:textAppearance="@style/titleText24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/textLastName"
            android:textAppearance="@style/baseText16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textPerson" />

        <TextView
            android:id="@+id/textLastNameValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textAppearance="@style/baseText16"
            app:layout_constraintStart_toEndOf="@id/textLastName"
            app:layout_constraintTop_toBottomOf="@id/textPerson" />

        <TextView
            android:id="@+id/textFisrtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/textName"
            android:textAppearance="@style/baseText16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textLastName" />

        <TextView
            android:id="@+id/textFisrtNameValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textAppearance="@style/baseText16"
            app:layout_constraintStart_toEndOf="@id/textFisrtName"
            app:layout_constraintTop_toBottomOf="@id/textLastNameValue" />

        <TextView
            android:id="@+id/textPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/textPhone"
            android:textAppearance="@style/baseText16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textFisrtNameValue"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/textPhoneValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textAppearance="@style/baseText16"
            app:layout_constraintStart_toEndOf="@id/textPhone"
            app:layout_constraintTop_toBottomOf="@id/textFisrtNameValue" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardGetLoanInfo"
        style="@style/cardStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:elevation="3dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardLoanPerson"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageGetLoan"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="10dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_account_balance_36" />

        <TextView
            android:id="@+id/textGetLoanInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/textGetLoanInfo"
            android:textAppearance="@style/titleText24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textGetInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/textHowGetLoan"
            android:textAppearance="@style/baseText16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textGetLoanInfo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>