<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/buttonHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:text="@string/textButtonHistory"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/buttonClose"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_close_24" />

    <ImageView
        android:layout_width="500dp"
        android:layout_height="500dp"
        android:src="@drawable/ic_baseline_check_circle_outline_24"
        app:layout_constraintBottom_toBottomOf="@+id/buttonHistory"
        app:layout_constraintStart_toStartOf="@+id/textInfo"
        app:layout_constraintTop_toTopOf="@+id/textInfo"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/textCompleted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/textCompleted"
        android:textAppearance="@style/titleText24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="70dp"
        android:elevation="2dp"
        android:padding="10dp"
        android:background="@color/backgroundBase"
        android:text="@string/textLoanInfo"
        android:textAppearance="@style/baseText16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textCompleted" />

</androidx.constraintlayout.widget.ConstraintLayout>